<resources>
    <string name="app_name">Mafia</string>
    <string name="create_serv">Open server</string>
    <string name="connect_to_serv">Find server</string>
    <string name="yourn">your name</string>
    <string name="servn">server name</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="name">name</string>
    <string name="join">join!</string>
    <string name="players">Players</string>
    <string name="entername">Enter name please!</string>
    <string name="serventername">Enter server name please!</string>
    <string name="nowifi">Connect to wifi please!</string>
    <string name="back">Back</string>
    <string name="servers">Found servers:</string>
    <string name="start">Start</string>
    <string name="connecting">Connecting</string>
    <string name="connect">Connect</string>
    <string name="cooner">Connection error!</string>
    <string name="gamews">Game was all reade stared</string>
    <string name="exit">Exit</string>
    <string name="areyou">Are you sure?</string>
    <string name="needfor">Need 4 or more people!</string>
    <string name="roles">Roles</string>
    <string name="innocents">Innocents</string>
    <string name="detective">Detective</string>
    <string name="doctorandbar">Doctor and Barman</string>
    <string name="defaul">Default</string>
    <string name="mfshude">The mafia must be in the game!</string>
    <string name="toomach">Too much mafia!</string>
    <string name="password">password</string>
    <string name="kill_him">kill him:</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="my_role">my role</string>
    <string name="kill_me">kill me:</string>
    <string name="hide_screen">Hide the screen from other players!</string>
    <string name="select_the_option">Select the option to get the picture</string>
    <string name="create_a_photo">Create a photo</string>
    <string name="select_from_saved">Select from saved</string>
    <string name="remove_image">Remove image</string>
    <string name="searching">Searching...</string>
    <string name="soon_the_beginning">Soon the beginning</string>
</resources>
