<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.awds333.a2016.mafia.activities.MainActivity">

    <Button
        android:text="@string/create_serv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newserver"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/findeserv"
        app:layout_constraintLeft_toLeftOf="@+id/findeserv"
        android:layout_marginLeft="-3dp" />

    <Button
        android:id="@+id/findeserv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_serv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp" />


</android.support.constraint.ConstraintLayout>
